<resources>
    <string name="app_name">海情大酒店</string>

    <string name="space">&#160;</string>
    <string name="enter">\n</string>

    <!--登录界面-->
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_input_phoNum">请输入手机号</string>
    <string name="btn_input_password">请输入密码</string>
    <string name="btn_retrieve_password">找回密码</string>
    <string name="btn_phoNum_login">手机号快捷登录</string>

    <!--注册界面-->

    <string name="register">注册</string>
    <!--首页-->
    <string name="home_menu_text0">入住</string>
    <string name="home_menu_text1">2天</string>
    <string name="home_menu_text2">离店</string>
    <string name="home_btn_reserve_now">立即预定</string>
    <string name="home_btn_location">酒店位置</string>
    <string name="home_btn_contact_us">联系我们</string>
    <string name="home_btn_hotel_details">酒店详情</string>
    <string name="home_line_onsale">当前促销</string>
    <string name="home_booking_now_details">房间详情</string>
    <string name="home_catering_details">商品描述</string>
    <string name="home_catering_set_meal">套餐内容</string>
    <string name="home_catering_standard">规格</string>
    <string name="home_catering_unit_price">单价</string>
    <string name="home_catering_price">价值：</string>
    <string name="home_catering_pre_price">优惠价：</string>

    <!--商城-->
    <string name="shop_title">商城</string>


    <!--设施-->
    <string name="facility_title">设施</string>
    <string name="facility_room_title">房间设施</string>
    <string name="facility_wedding_title">房间设施</string>
    <string name="facility_meeting_title">会议设施</string>
    <string name="facility_catering_title">餐饮设施</string>


    <!--我的-->

    <string name="mine_btn_collect">收藏</string>
    <string name="mine_btn_shopping_cart">购物车</string>
    <string name="mine_btn_message_center">消息中心</string>
    <string name="mine_item_reserve">酒店预订</string>
    <string name="mine_item_order_form">商城订单</string>
    <string name="mine_item_vip_rank">会员积分</string>
    <string name="mine_title_orderRoom">我的预订</string>
    <string name="mine_title_roomDetails">房间详情</string>
    <string name="mine_title_cateringDetails">餐饮详情</string>
    <string name="mine_title_shopDetails">订单详情</string>
    <string name="mine_title_setting">设置</string>
    <string name="mine_btn_password">修改密码</string>
    <string name="mine_btn_clean">缓存清除</string>
    <string name="mine_btn_about">关于我们</string>
    <string name="mine_btn_exit">退出登录</string>
    <string name="mine_title_change_password">修改密码</string>
    <string name="mine_btn_confirm_change">确认修改</string>

</resources>
