<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--蓝色背景-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_225"
        android:background="@color/homepage_top_bule">

        <ImageView
            android:id="@+id/home_pic"
            android:layout_width="@dimen/activity_size_92"
            android:layout_height="@dimen/activity_size_92"
            android:layout_centerInParent="true"
            android:background="@mipmap/home_pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_5"
            android:text="海情大酒店"
            android:textColor="@color/whilte"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>
    <!--收藏、购物车、消息中心-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_51"
        android:orientation="horizontal">
        <!--收藏的外部布局-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <!--第一个收藏的内部布局-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="@dimen/activity_size_20"
                    android:layout_height="@dimen/activity_size_20"
                    android:layout_gravity="center"
                    android:background="@mipmap/mine_collect" />

                <TextView
                    android:layout_width="@dimen/activity_size_28"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_size_5"
                    android:text="@string/mine_btn_collect" />
            </LinearLayout>
        </RelativeLayout>

        <!--收藏的外部布局-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <!--第一个收藏的内部布局-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="@dimen/activity_size_20"
                    android:layout_height="@dimen/activity_size_20"
                    android:layout_gravity="center"
                    android:background="@mipmap/mine_shopping_cart" />

                <TextView
                    android:layout_width="@dimen/activity_size_42"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_size_5"
                    android:text="@string/mine_btn_shopping_cart" />
            </LinearLayout>
        </RelativeLayout>

        <!--收藏的外部布局-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <!--第一个收藏的内部布局-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="@dimen/activity_size_21"
                    android:layout_height="@dimen/activity_size_19"
                    android:layout_gravity="center"
                    android:background="@mipmap/mine_message_center" />

                <TextView
                    android:layout_width="@dimen/activity_size_56"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_size_5"
                    android:text="@string/mine_btn_message_center" />
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

    <!--菜单条目0-->
    <LinearLayout
        android:id="@+id/ll_mine_room_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_60"
        android:orientation="horizontal">


        <!--酒店预订文字和图标-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_size_60"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mine_reserve_icon"
                android:layout_width="@dimen/activity_size_19"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_10"
                android:background="@mipmap/mine_reserve_icon" />

            <TextView
                android:layout_width="@dimen/activity_size_70"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_15"
                android:text="@string/mine_item_reserve"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
        <!--箭头-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:layout_width="@dimen/activity_size_10"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/right_black_arrow" />
        </LinearLayout>
    </LinearLayout>



    <!--菜单条目1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_60"
        android:orientation="horizontal">


        <!--商城订单文字和图标-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_size_60"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mine_order_form_icon"
                android:layout_width="@dimen/activity_size_16"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_10"
                android:background="@mipmap/mine_order_form" />

            <TextView
                android:layout_width="@dimen/activity_size_70"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_18"
                android:text="@string/mine_item_order_form"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
        <!--箭头-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:layout_width="@dimen/activity_size_10"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/right_black_arrow" />
        </LinearLayout>
    </LinearLayout>

    <!--菜单条目2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_60"
        android:orientation="horizontal">


        <!--会员积分文字和图标-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_size_60"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mine_vip_rank_icon"
                android:layout_width="@dimen/activity_size_19"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_10"
                android:background="@mipmap/mine_vip_rank_icon" />

            <TextView
                android:layout_width="@dimen/activity_size_70"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_15"
                android:text="@string/mine_item_vip_rank"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
        <!--箭头-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:layout_width="@dimen/activity_size_10"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/right_black_arrow" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
