<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.xiaocool.haiqinghotel.ui.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!--顶部ViewPager-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_size_210"
                    android:background="@mipmap/viewpager_pic0" />
            </LinearLayout>
            <!--预订栏-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_size_140"
                android:orientation="vertical">

                <!--第一行-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_size_40">
                    <!--入住-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/home_menu_text0" />
                    </RelativeLayout>
                    <!--天数-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/home_menu_text1"
                            android:textColor="@color/homepage_orange" />
                    </RelativeLayout>
                    <!--离店-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/home_menu_text2" />
                    </RelativeLayout>
                </LinearLayout>
                <!--第二行-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_size_40"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <!--入住日期-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="3月28日"
                                android:textColor="@color/homepage_top_bule"
                                android:textSize="@dimen/text_size_20" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/activity_size_5"
                                android:text="今天"
                                android:textColor="@color/homepage_top_bule"
                                android:textSize="@dimen/text_size_15" />
                        </LinearLayout>
                    </RelativeLayout>
                    <!--中间控制空白布局-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5">

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <!--离店日期-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="3月30日"
                                android:textColor="@color/homepage_top_bule"
                                android:textSize="@dimen/text_size_20" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/activity_size_5"
                                android:text="后天"
                                android:textColor="@color/homepage_top_bule"
                                android:textSize="@dimen/text_size_15" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
                <!--第三行-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_size_60">

                    <Button
                        android:layout_width="@dimen/activity_size_336"
                        android:layout_height="@dimen/activity_size_40"
                        android:layout_centerInParent="true"
                        android:background="@color/homepage_top_bule"
                        android:text="@string/home_btn_reserve_now"
                        android:textColor="@color/whilte"
                        android:textSize="@dimen/text_size_14" />
                </RelativeLayout>
            </LinearLayout>

            <!--酒店位置、联系我们、酒店详情-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_size_51"
                android:orientation="horizontal">
                <!--酒店位置的外部布局-->
                <RelativeLayout
                    android:id="@+id/home_btn_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <!--酒店位置的内部布局-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:layout_width="@dimen/activity_size_12"
                            android:layout_height="@dimen/activity_size_20"
                            android:layout_gravity="center"
                            android:background="@mipmap/home_location_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/activity_size_15"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/activity_size_5"
                            android:text="@string/home_btn_location" />
                    </LinearLayout>
                </RelativeLayout>

                <!--联系我们的外部布局-->
                <RelativeLayout
                    android:id="@+id/home_btn_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <!--联系我们内部布局-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:layout_width="@dimen/activity_size_20"
                            android:layout_height="@dimen/activity_size_20"
                            android:layout_gravity="center"
                            android:background="@mipmap/home_contact_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/activity_size_14"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/activity_size_5"
                            android:text="@string/home_btn_contact_us" />
                    </LinearLayout>
                </RelativeLayout>

                <!--酒店详情外部布局-->
                <RelativeLayout
                    android:id="@+id/home_btn_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <!--酒店详情的内部布局-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:layout_width="@dimen/activity_size_20"
                            android:layout_height="@dimen/activity_size_20"
                            android:layout_gravity="center"
                            android:background="@mipmap/home_details_icon" />

                        <TextView
                            android:layout_width="@dimen/activity_size_56"
                            android:layout_height="@dimen/activity_size_14"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/activity_size_5"
                            android:text="@string/home_btn_hotel_details" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <!--橙色分隔线-->
            <LinearLayout
                android:layout_width="@dimen/activity_size_360"
                android:layout_height="@dimen/activity_size_20"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="——————————————"
                    android:textColor="@color/homepage_orange" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/activity_size_17"
                        android:layout_height="@dimen/activity_size_16"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/activity_size_15"
                        android:background="@mipmap/home_onsale_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/activity_size_10"
                        android:text="@string/home_line_onsale"
                        android:textColor="@color/homepage_orange"
                        android:textSize="@dimen/text_size_15" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="———————————"
                    android:textColor="@color/homepage_orange" />
            </LinearLayout>

            <!--促销列表-->
            <cn.xiaocool.haiqinghotel.ui.NoScrollListView
                android:id="@+id/home_onsale_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </cn.xiaocool.haiqinghotel.ui.NoScrollListView>

            <include layout="@layout/onsale_list_item"></include>
            <include layout="@layout/onsale_list_item"></include>
            <include layout="@layout/onsale_list_item"></include>
        </LinearLayout>
    </cn.xiaocool.haiqinghotel.ui.ReboundScrollView>
</LinearLayout>